[package]
name = "ping-monitor-rs"
version = "0.1.0"
edition = "2024"
description = "Network latency monitor with quality scoring and live graphs (GTK4/libadwaita)."
repository = "https://github.com/WhiteWolf832/PingMonitor"
license = "GPL-3.0-or-later"

[dependencies]
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_5"] }
async-channel = "2.5.0"
gtk = { version = "0.11.3", package = "gtk4", features = ["v4_14"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
